--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "Keepr": {
+    "SaaaNR": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
